--- a/Insper Jr.ipynb
+++ b/Insper Jr.ipynb
@@ -1099,23 +1099,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Após novamente chegar a um gráfico que não estabelece uma diferenciação no consumo do usuario baseando-se nas variáveis\\ que ele está contido, nós chegamos a 2 grandes assuntos pertinentes sobre a situação atual da +Sup: \\\n",
-    "    \\\n",
-    "    1. Posicionamento de mercado:\\\n",
-    "    \\\n",
-    "            A +Sup claramente focou em se estabelecer em todos os âmbitos possíveis, como por exemplo as regiões, a 2Sup\\\n",
-    "        atualmente está presente fisicamente em todas as regiões através de seus produtos, mas se por um lado isso pode trazer\\ \n",
-    "        respaldos positivos em curto prazo, a falta de foco no público-alvo que você quer atingir impede que você consiga\\ \n",
-    "        fidelizar um público, pois assim você ignora a tendência de mercado para investir parte dos seus recursos em áreas não\\ \n",
-    "        tão promissoras. Este será um ponto crucial a ser debatido na solução, a definição de um público-alvo/persona de\\ \n",
-    "        interesse para que a 2Sup consiga manejar seus recursos de forma eficiente\\\n",
-    "    \\\n",
-    "    2. Aquisição de público:\\\n",
-    "    \\\n",
-    "            A estratégia atua da 2Sup se baseia muito em fatores com os quais você não pode controlar, ou seja, por mais que \\\n",
-    "        faça sentido considerar meios influentes que se baseiam na prospecção passiva estabelecida pela recomendação, mas \\\n",
-    "        quando esse é um dos seus modos mais efetivos de prospecção isso pode se tornar um problema, já que a eficiência desse\\\n",
-    "        \"marketing\" torna-se volúvel\n"
+    "Após novamente chegar a um gráfico que não estabelece uma diferenciação no consumo do usuario baseando-se nas variáveis que ele está contido, nós chegamos a 2 grandes assuntos pertinentes sobre a situação atual da +Sup:\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "1. Posicionamento de mercado:\n",
+    "        A +Sup claramente focou em se estabelecer em todos os âmbitos possíveis, como por exemplo as regiões, a 2Sup \n",
+    "    atualmente está presente fisicamente em todas as regiões através de seus produtos, mas se por um lado isso pode trazer \n",
+    "    respaldos positivos em curto prazo, a falta de foco no público-alvo que você quer atingir impede que você consiga \n",
+    "    fidelizar um público, pois assim você ignora a tendência de mercado para investir parte dos seus recursos em áreas não \n",
+    "    tão promissoras. Este será um ponto crucial a ser debatido na solução, a definição de um público-alvo/persona de \n",
+    "    interesse para que a 2Sup consiga manejar seus recursos de forma eficiente"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "2. Aquisição de público:\n",
+    "        A estratégia atua da 2Sup se baseia muito em fatores com os quais você não pode controlar, ou seja, por mais que \n",
+    "    faça sentido considerar meios influentes que se baseiam na prospecção passiva estabelecida pela recomendação, mas \n",
+    "    quando esse é um dos seus modos mais efetivos de prospecção isso pode se tornar um problema, já que a eficiência desse \n",
+    "    \"marketing\" torna-se volúvel"
    ]
   },
   {
